# kodi-kijkwijzer

./: .gitignore  README.md  backfill.py  config.example.yaml  overrides.example.yaml  overrides_movies.example.yaml  overrides_tvshows.example.yaml  pyproject.toml  requirements.txt
docs/plans/: 2026-03-20-kodi-rating-backfill-design.md  2026-03-20-kodi-rating-backfill-implementation.md
kodi_kijkwijzer/: __main__.py  backfill.py  cli.py  config.py  kodi.py  media_types.py  tracker.py
kodi_kijkwijzer/providers/: kijkwijzer.py  omdb.py  tmdb.py
